# phardiviewer

./: CMakeLists.txt  main.cpp
resources/: custom.frag  light.inc.frag  resources.qrc
shaders/: custom.geom  custom.vert
src/: 362_shell_semisphere.cpp  362_shell_semisphere.h  femlines.cpp  femlines.h  femlinesgeometry.cpp  femlinesgeometry.h  femmesh.cpp  femmesh.h  femmeshgeometry.cpp  femmeshgeometry.h  image.h  linesdata.cpp  linesdata.h  linesdataloader.cpp  linesdataloader.h  linesdataloaderoff.cpp  linesdataloaderoff.h  meshdata.cpp  meshdata.h  meshdataloader.cpp  meshdataloader.h  meshdataloaderoff.cpp  meshdataloaderoff.h  odfgenerator.cpp  odfgenerator.h  odfvisualizer.cpp  odfvisualizer.h  orbitcameracontrollermodified.cpp  orbitcameracontrollermodified.h  pervertexcolormaterialmodified.cpp  pervertexcolormaterialmodified.h  slicemesh.cpp  slicemesh.h  triangledata.cpp  triangledata.h  vertexdata.cpp  vertexdata.h
